# HandScript

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  run.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  documents.py  pages.py  projects.py  training_samples.py  writers.py
backend/app/ml/: __init__.py  base_document_segmenter.py  doctr_segmenter.py  factory.py  layout_segmenter.py  models.py  segmentation.py  training.py  types.py  utils.py
backend/app/models/: __init__.py  document.py  page.py  project.py  training_sample.py  writer.py
backend/app/schemas/: __init__.py  base.py  document.py  page.py  project.py  training_sample.py
backend/app/services/: __init__.py  cleanup.py  ocr.py  training.py
backend/app/utils/: files.py  logging.py
backend/tests/: conftest.py  test_main.py
backend/tests/api/: test_documents.py  test_pages.py  test_projects.py  test_writers.py
backend/tests/ml/: test_ocr_accuracy.py  test_training.py
backend/tests/services/: test_ocr.py  test_training.py
backend/tests/utils/: test_files.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: eslint.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ImagePreviewModal.tsx  Layout.tsx  PageCard.tsx  Sidebar.tsx  TrainingSampleCard.tsx
frontend/src/components/dialogs/: AddSampleDialog.tsx  NewDocumentDialog.tsx  (+6 more)
frontend/src/config/: api.ts
frontend/src/hooks/: useEditorState.ts  useTextFormat.ts
frontend/src/pages/: DocumentPreview.tsx  DocumentView.tsx  PageEditor.tsx  ProjectList.tsx  ProjectView.tsx  WriterDetail.tsx  WriterManagement.tsx
frontend/src/services/: api.ts
frontend/src/styles/: print.css
frontend/src/utils/: writer.ts
(+3 files in other folders)
